# klassic-quote-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  http-client.env.json  renovate.json  requests.http  the-war-of-flower.json
.github/workflows/: rust-cicd.yml
src/: data.rs  main.rs  movie_enum.rs
src/quotes/: nameless-gangster.json  new-world.json  the-man-from-nowhere.json  the-war-of-flower.json  wish.json
